# slagavallen

./: .clang-format  CMakeLists.txt  README.md  resources.qrc
.github/workflows/: cmake.yml
qml/: main.qml
resources/: slagavallen_en_001.ts
resources/atlases/: simple.atlas
resources/shader/: background.fsh  background.vsh  terrain.fsh  terrain.vsh
src/: main.cpp
src/game/: game.cpp  game.h
src/graphic/: backgroundnode.cpp  backgroundnode.h  gameworlditem.cpp  gameworlditem.h  terrainmaterial.cpp  terrainmaterial.h  terrainnode.cpp  terrainnode.h  textureatlas.cpp  textureatlas.h
src/logic/: hex.cpp  hex.h  map.cpp  map.h  mapgenerator.cpp  mapgenerator.h  tile.cpp  tile.h
